// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Date picker Disabled renders correctly 1`] = `
<jest>
  <div
    class="ecl-datepicker"
    data-ecl-auto-init="Datepicker"
    data-ecl-datepicker-toggle=""
    data-placeholder="DD-MM-YYYY"
    data-value="2025-08-30"
  >
    <duet-date-picker
      disabled=""
      first-day-of-week="1"
      identifier="example-input-id-1"
      max="2026-08-30"
      min="2024-06-15"
    />
  </div>
</jest>
`;

exports[`Date picker Invalid renders correctly 1`] = `
<jest>
  <div
    class="ecl-datepicker ecl-datepicker--invalid"
    data-ecl-auto-init="Datepicker"
    data-ecl-datepicker-toggle=""
    data-placeholder="DD-MM-YYYY"
    data-value="2025-08-30"
    invalid=""
  >
    <duet-date-picker
      first-day-of-week="1"
      identifier="example-input-id-1"
      max="2026-08-30"
      min="2024-06-15"
    />
  </div>
</jest>
`;

exports[`Date picker Optional renders correctly 1`] = `
<jest>
  <div
    class="ecl-datepicker"
    data-ecl-auto-init="Datepicker"
    data-ecl-datepicker-toggle=""
    data-placeholder="DD-MM-YYYY"
    data-value="2025-08-30"
  >
    <duet-date-picker
      first-day-of-week="1"
      identifier="example-input-id-1"
      max="2026-08-30"
      min="2024-06-15"
    />
  </div>
</jest>
`;

exports[`Date picker Optional renders correctly with extra attributes 1`] = `
<jest>
  <div
    class="ecl-datepicker"
    data-ecl-auto-init="Datepicker"
    data-ecl-datepicker-toggle=""
    data-placeholder="DD-MM-YYYY"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
    data-value="2025-08-30"
  >
    <duet-date-picker
      first-day-of-week="1"
      identifier="example-input-id-1"
      max="2026-08-30"
      min="2024-06-15"
    />
  </div>
</jest>
`;

exports[`Date picker Optional renders correctly with extra class names 1`] = `
<jest>
  <div
    class="ecl-datepicker custom-class custom-class--test"
    data-ecl-auto-init="Datepicker"
    data-ecl-datepicker-toggle=""
    data-placeholder="DD-MM-YYYY"
    data-value="2025-08-30"
  >
    <duet-date-picker
      first-day-of-week="1"
      identifier="example-input-id-1"
      max="2026-08-30"
      min="2024-06-15"
    />
  </div>
</jest>
`;

exports[`Date picker Optional renders correctly with extra group class names 1`] = `
<jest>
  <div
    class="ecl-datepicker"
    data-ecl-auto-init="Datepicker"
    data-ecl-datepicker-toggle=""
    data-placeholder="DD-MM-YYYY"
    data-value="2025-08-30"
  >
    <duet-date-picker
      first-day-of-week="1"
      identifier="example-input-id-1"
      max="2026-08-30"
      min="2024-06-15"
    />
  </div>
</jest>
`;

exports[`Date picker Optional renders correctly with extra label class names 1`] = `
<jest>
  <div
    class="ecl-datepicker"
    data-ecl-auto-init="Datepicker"
    data-ecl-datepicker-toggle=""
    data-placeholder="DD-MM-YYYY"
    data-value="2025-08-30"
  >
    <duet-date-picker
      first-day-of-week="1"
      identifier="example-input-id-1"
      max="2026-08-30"
      min="2024-06-15"
    />
  </div>
</jest>
`;

exports[`Date picker Required renders correctly 1`] = `
<jest>
  <div
    class="ecl-datepicker"
    data-ecl-auto-init="Datepicker"
    data-ecl-datepicker-toggle=""
    data-placeholder="DD-MM-YYYY"
    data-value="2025-08-30"
  >
    <duet-date-picker
      first-day-of-week="1"
      identifier="example-input-id-1"
      max="2026-08-30"
      min="2024-06-15"
      required=""
    />
  </div>
</jest>
`;
